// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests for StorageViewHead component should render StorageViewHead component correctly 1`] = `
<thead>
  <tr>
    <th>
      Name
    </th>
    <th>
      Unit
    </th>
    <th>
      Entity
    </th>
    <th>
      Options
    </th>
  </tr>
</thead>
`;

exports[`snapshot tests for StorageViewItem component should render StorageViewItem component correctly 1`] = `
<tr>
  <td>
    Milk
  </td>
  <td>
    1L
  </td>
  <td>
    2.5
  </td>
  <td>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      -
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      +
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Edit
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Remove
    </button>
  </td>
</tr>
`;

exports[`snapshot tests for StorageViewNewItem component should render StorageViewNewItem component with units and items correctly 1`] = `
<tfoot>
  <tr>
    <td>
      <select
        id="Item"
        name="Item"
        onChange={[Function]}
      >
        <option
          value={0}
        >
          Sparkling water
        </option>
        <option
          value={1}
        >
          Apple juice
        </option>
        <option
          value={2}
        >
          Craft beer
        </option>
        <option
          value={3}
        >
          Milk
        </option>
        <option
          value={5}
        >
          Coke
        </option>
      </select>
    </td>
    <td>
      <select
        id="Unit"
        name="Unit"
        onChange={[Function]}
      >
        <option
          value={0}
        >
          0.33L
        </option>
        <option
          value={1}
        >
          0.5L
        </option>
        <option
          value={2}
        >
          1.0L
        </option>
      </select>
    </td>
    <td>
      <input
        min="0"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </td>
    <td>
      <button
        disabled={false}
        onClick={[Function]}
      >
        Add
      </button>
    </td>
  </tr>
</tfoot>
`;

exports[`snapshot tests for StorageViewNewItem component should render empty StorageViewNewItem component correctly 1`] = `
<tfoot>
  <tr>
    <td>
      <select
        id="Item"
        name="Item"
        onChange={[Function]}
      />
    </td>
    <td>
      <select
        id="Unit"
        name="Unit"
        onChange={[Function]}
      />
    </td>
    <td>
      <input
        min="0"
        onChange={[Function]}
        type="number"
        value={0}
      />
    </td>
    <td>
      <button
        disabled={false}
        onClick={[Function]}
      >
        Add
      </button>
    </td>
  </tr>
</tfoot>
`;
